force-app/main/default/objects/IFv2_Request__c/fields/EmployeeCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCompanyCode__c</fullName>
    <description>This is a formula field to fetch from contact</description>
    <formula>Employee__r.Company_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Employee Company Code</inlineHelpText>
    <label>Employee Company Code</label>
    <type>Text</type>
</CustomField>