force-app/main/default/objects/IFv2_Request__c/fields/EmployeeCompanyCodeIndiaTravel__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCompanyCodeIndiaTravel__c</fullName>
    <label>Employee Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>