force-app/main/default/objects/IFv2_Request__c/fields/EmployeeCostCenter__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCostCenter__c</fullName>
    <description>This field is used to get cost center from Employee.</description>
    <formula>Employee__r.Cost_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Employee Cost Center</inlineHelpText>
    <label>Employee Cost Center</label>
    <type>Text</type>
</CustomField>