force-app/main/default/objects/IFv2_Request__c/fields/EmployeeCostCenterIndiaTravel__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCostCenterIndiaTravel__c</fullName>
    <label>Employee Cost Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>