force-app/main/default/objects/IFv2_Request__c/fields/EmployeeIndiaTravel__c.field-meta.xml
<CustomField>
    <fullName>EmployeeIndiaTravel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests2Vig</relationshipName>
    <type>Lookup</type>
</CustomField>