force-app/main/default/objects/IFv2_Request__c/fields/EmployeeOrgUnit__c.field-meta.xml
<CustomField>
    <fullName>EmployeeOrgUnit__c</fullName>
    <description>This field is used to get Org Unit from contact</description>
    <formula>Employee__r.Org_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Employee Org Unit</inlineHelpText>
    <label>Employee Org Unit</label>
    <type>Text</type>
</CustomField>