force-app/main/default/objects/IFv2_Request__c/fields/EmployeeOrgUnitIndiaTravel__c.field-meta.xml
<CustomField>
    <fullName>EmployeeOrgUnitIndiaTravel__c</fullName>
    <label>Employee Org Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>