force-app/main/default/objects/IFv2_Request__c/fields/EmployeePersonalNumberIndiaTravel__c.field-meta.xml
<CustomField>
    <fullName>EmployeePersonalNumberIndiaTravel__c</fullName>
    <label>Employee Personnel Number</label>
    <type>Phone</type>
</CustomField>