force-app/main/default/objects/IFv2_Request__c/fields/EmployeePersonnelNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeePersonnelNumber__c</fullName>
    <formula>Employee__r.Personnel_NumberText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Personnel Number</label>
    <type>Text</type>
</CustomField>