force-app/main/default/objects/IFv2_Request__c/fields/EstimatedValueWithoutTaxes__c.field-meta.xml
<CustomField>
    <fullName>EstimatedValueWithoutTaxes__c</fullName>
    <description>This is used to provide estimated value for direct and Indirect workflow.</description>
    <inlineHelpText>In EURO. In Case of &quot;Change in Masterdata&quot; it is &quot;Annual Accumulated Value&quot;.(No negative values are allowed)
For COQ Approval Submission: “Total cost 3 yrs (with Cost as quoted | TCO, Tooling costs)” of the proposed supplier</inlineHelpText>
    <label>Estimated Value (without taxes )</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>