force-app/main/default/objects/IFv2_Request__c/fields/FC_Notification__c.field-meta.xml
<CustomField>
    <fullName>FC_Notification__c</fullName>
    <inlineHelpText>FC notification (mandatory for Quality Costs and Logistic Claims)</inlineHelpText>
    <label>FC Notification</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>