force-app/main/default/objects/IFv2_Request__c/fields/FileCount__c.field-meta.xml
<CustomField>
    <fullName>FileCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FileCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>