force-app/main/default/objects/IFv2_Request__c/fields/Finishedby__c.field-meta.xml
<CustomField>
    <fullName>Finishedby__c</fullName>
    <description>used in china workflows</description>
    <label>Finished by</label>
    <type>Date</type>
</CustomField>