force-app/main/default/objects/IFv2_Request__c/fields/FreightPrice__c.field-meta.xml
<CustomField>
    <fullName>FreightPrice__c</fullName>
    <inlineHelpText>Enter the freight price</inlineHelpText>
    <label>Freight Price</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>