force-app/main/default/objects/IFv2_Request__c/fields/FromDate__c.field-meta.xml
<CustomField>
    <fullName>FromDate__c</fullName>
    <description>Used for Badgemanagement Workflow (mandatory in case of usage information = medical reasons)</description>
    <label>From Date</label>
    <type>Date</type>
</CustomField>