force-app/main/default/objects/IFv2_Request__c/fields/Full8Dreportnecessary__c.field-meta.xml
<CustomField>
    <fullName>Full8Dreportnecessary__c</fullName>
    <description>Used in Concession Workflow</description>
    <label>Full 8D report necessary?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>