force-app/main/default/objects/IFv2_Request__c/fields/General_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>General_Short_Description__c</fullName>
    <formula>Account__r.IFv2_ShortDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short Description</label>
    <type>Text</type>
</CustomField>