force-app/main/default/objects/IFv2_Request__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Used in Purchasing Approval Workflow</description>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PUD</fullName>
            </value>
            <value>
                <fullName>PUE</fullName>
            </value>
            <value>
                <fullName>PUS</fullName>
            </value>
            <value>
                <fullName>PUI</fullName>
            </value>
            <value>
                <fullName>AM-PUR</fullName>
            </value>
            <value>
                <fullName>PU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>