force-app/main/default/objects/IFv2_Request__c/fields/GSTIN__c.field-meta.xml
<CustomField>
    <fullName>GSTIN__c</fullName>
    <formula>SupplierCustomerNo__r.IFv2_GSTIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSTIN</label>
    <type>Text</type>
</CustomField>