force-app/main/default/objects/IFv2_Request__c/fields/Hallenbetriebsrat_Date__c.field-meta.xml
<CustomField>
    <fullName>Hallenbetriebsrat_Date__c</fullName>
    <label>Betriebsrat vorab informiert am</label>
    <type>Date</type>
</CustomField>