force-app/main/default/objects/IFv2_Request__c/fields/Hallenbetriebsrat_Name__c.field-meta.xml
<CustomField>
    <fullName>Hallenbetriebsrat_Name__c</fullName>
    <label>Betriebrat Name, Vorname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>