force-app/main/default/objects/IFv2_Request__c/fields/IFE_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>IFE_Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IFE Process Release</fullName>
            </value>
            <value>
                <fullName>IFE Process Update</fullName>
            </value>
            <value>
                <fullName>Control Plan Release</fullName>
            </value>
            <value>
                <fullName>Control Plan Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>