force-app/main/default/objects/IFv2_Request__c/fields/iFreightPlant__c.field-meta.xml
<CustomField>
    <fullName>iFreightPlant__c</fullName>
    <formula>TEXT(CreatedBy.iFreight_Plant__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight Plant</label>
    <type>Text</type>
</CustomField>