force-app/main/default/objects/IFv2_Request__c/fields/IFv2_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Customer_Name__c</fullName>
    <description>used in DVP</description>
    <label>Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>