force-app/main/default/objects/IFv2_Request__c/fields/IFv2_InvoicingPartyVendorNum__c.field-meta.xml
<CustomField>
    <fullName>IFv2_InvoicingPartyVendorNum__c</fullName>
    <formula>Account__r.IFv2_InvoicingPartyvendornumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Party Vendor Number</label>
    <type>Text</type>
</CustomField>