force-app/main/default/objects/IFv2_Request__c/fields/IFv2_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Project_Type__c</fullName>
    <description>used in DVP</description>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>