force-app/main/default/objects/IFv2_Request__c/fields/Ifv2_ProxyApprovalUserList__c.field-meta.xml
<CustomField>
    <fullName>Ifv2_ProxyApprovalUserList__c</fullName>
    <label>Proxy Approval User List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>