force-app/main/default/objects/IFv2_Request__c/fields/InformWhenApproved4__c.field-meta.xml
<CustomField>
    <fullName>InformWhenApproved4__c</fullName>
    <description>To inform additional user when request is approved.</description>
    <label>Inform When Approved 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>