force-app/main/default/objects/IFv2_Request__c/fields/InformWhenRejected2__c.field-meta.xml
<CustomField>
    <fullName>InformWhenRejected2__c</fullName>
    <label>Inform When Rejected 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>