force-app/main/default/objects/IFv2_Request__c/fields/InformWhenRejected3__c.field-meta.xml
<CustomField>
    <fullName>InformWhenRejected3__c</fullName>
    <label>Inform When Rejected 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>