force-app/main/default/objects/IFv2_Request__c/fields/InformWhenRejected4__c.field-meta.xml
<CustomField>
    <fullName>InformWhenRejected4__c</fullName>
    <label>Inform When Rejected 4</label>
    <length>20</length>
    <type>Text</type>
</CustomField>