force-app/main/default/objects/IFv2_Request__c/fields/InvoiceDateDocumentDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDateDocumentDate__c</fullName>
    <description>Used in APM Workflow</description>
    <label>Invoice Date (Document Date)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>