force-app/main/default/objects/IFv2_Request__c/fields/InvoiceItemAmount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceItemAmount__c</fullName>
    <inlineHelpText>SAP Invoice Item amount</inlineHelpText>
    <label>Invoice Item Amount</label>
    <length>16</length>
    <type>Text</type>
</CustomField>