force-app/main/default/objects/IFv2_Request__c/fields/InvoiceItemCurrency__c.field-meta.xml
<CustomField>
    <fullName>InvoiceItemCurrency__c</fullName>
    <description>Used in APM Workflows</description>
    <inlineHelpText>SAP Invoice Item amount</inlineHelpText>
    <label>Invoice Item Currency</label>
    <length>5</length>
    <type>Text</type>
</CustomField>