force-app/main/default/objects/IFv2_Request__c/fields/InvoiceMethod__c.field-meta.xml
<CustomField>
    <fullName>InvoiceMethod__c</fullName>
    <label>Invoice Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>