force-app/main/default/objects/IFv2_Request__c/fields/Is_Same_Approver_6_And_7__c.field-meta.xml
<CustomField>
    <fullName>Is_Same_Approver_6_And_7__c</fullName>
    <description>This formula field is used in Personnal request approval process to identify the 6th and 7th approvers to skip the duplicate approval email.</description>
    <formula>AND(  
      NOT(ISBLANK(Role06__c)), 
      NOT(ISBLANK(Role07__c)),
      Role06__c=&quot;zuständiger BV&quot;,
      Role07__c =&quot;Geschäftsführer&quot;,
      NOT(ISBLANK(Approver6__c)), 
      NOT(ISBLANK(Approver7__c)),
      Approver6__r.Username =&quot;peter.sokol@seg-automotive.com&quot;,
      Approver7__r.Username =&quot;peter.sokol@seg-automotive.com&quot;   
 
)</formula>
    <label>Is Same Approver 6 And 7?</label>
    <type>Checkbox</type>
</CustomField>