force-app/main/default/objects/IFv2_Request__c/fields/IsMaterialValidated__c.field-meta.xml
<CustomField>
    <fullName>IsMaterialValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Concession main material validation indicator</description>
    <label>Is Material Validated</label>
    <type>Checkbox</type>
</CustomField>