force-app/main/default/objects/IFv2_Request__c/fields/ItemType__c.field-meta.xml
<CustomField>
    <fullName>ItemType__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tools/Dies/Fixtures (Returnable due 2 years)</fullName>
            </value>
            <value>
                <fullName>Other Indirect/Indirect material (Returnable due 90 days)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>