force-app/main/default/objects/IFv2_Request__c/fields/Local_Expert_Id__c.field-meta.xml
<CustomField>
    <fullName>Local_Expert_Id__c</fullName>
    <label>Local Expert Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>