force-app/main/default/objects/IFv2_Request__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location for China Training Request</description>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stuttgart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>