force-app/main/default/objects/IFv2_Request__c/fields/Location_to_which_this_applies__c.field-meta.xml
<CustomField>
    <fullName>Location_to_which_this_applies__c</fullName>
    <description>used in workflow employee suggestion scheme US MX</description>
    <inlineHelpText>Please enter the location for which your suggestion applies.</inlineHelpText>
    <label>Location to which this applies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novi</fullName>
            </value>
            <value>
                <fullName>Lerma</fullName>
            </value>
            <value>
                <fullName>both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>