force-app/main/default/objects/IFv2_Request__c/fields/MAEClassification__c.field-meta.xml
<CustomField>
    <fullName>MAEClassification__c</fullName>
    <label>MAE Classification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TypeofInvestment__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Quality-QM</fullName>
            </value>
            <value>
                <fullName>Quality-PUQ</fullName>
            </value>
            <value>
                <fullName>Quality-MOE</fullName>
            </value>
            <value>
                <fullName>Productivity</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>Plant Maintenance</fullName>
            </value>
            <value>
                <fullName>MAE modification/ flexibilization</fullName>
            </value>
            <value>
                <fullName>MAE Maintenance (replacement)</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>