force-app/main/default/objects/IFv2_Request__c/fields/MaterialClass__c.field-meta.xml
<CustomField>
    <fullName>MaterialClass__c</fullName>
    <label>Material Class</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProductClass__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>EZ</fullName>
            </value>
            <value>
                <fullName>EZFE</fullName>
            </value>
            <value>
                <fullName>EZRS</fullName>
            </value>
            <value>
                <fullName>LOG IDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>