force-app/main/default/objects/IFv2_Request__c/fields/MaterialDescription__c.field-meta.xml
<CustomField>
    <fullName>MaterialDescription__c</fullName>
    <description>This is used in Concession workflow</description>
    <label>Material Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>