force-app/main/default/objects/IFv2_Request__c/fields/MaterialGroup__c.field-meta.xml
<CustomField>
    <fullName>MaterialGroup__c</fullName>
    <description>Material Group field.</description>
    <inlineHelpText>Full five-digit number and seperate multiple input in lines</inlineHelpText>
    <label>Material Group</label>
    <type>TextArea</type>
</CustomField>