force-app/main/default/objects/IFv2_Request__c/fields/MaterialNo__c.field-meta.xml
<CustomField>
    <fullName>MaterialNo__c</fullName>
    <description>Used in Concession Workflow</description>
    <label>Material No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>