force-app/main/default/objects/IFv2_Request__c/fields/Mentor_User__c.field-meta.xml
<CustomField>
    <fullName>Mentor_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>