force-app/main/default/objects/IFv2_Request__c/fields/MERLINSubmissionNumber__c.field-meta.xml
<CustomField>
    <fullName>MERLINSubmissionNumber__c</fullName>
    <label>MERLIN Submission Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>