force-app/main/default/objects/IFv2_Request__c/fields/mgpParentRequestName__c.field-meta.xml
<CustomField>
    <fullName>mgpParentRequestName__c</fullName>
    <label>Parent Request Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>