force-app/main/default/objects/IFv2_Request__c/fields/Migration_Information__c.field-meta.xml
<CustomField>
    <fullName>Migration_Information__c</fullName>
    <label>Migration Information</label>
    <length>100</length>
    <type>Text</type>
</CustomField>