force-app/main/default/objects/IFv2_Request__c/fields/NumberofRequests__c.field-meta.xml
<CustomField>
    <fullName>NumberofRequests__c</fullName>
    <description>Personnel Request</description>
    <inlineHelpText>Required if PANF type is Multiple requirement</inlineHelpText>
    <label>Number of Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>