force-app/main/default/objects/IFv2_Request__c/fields/Ocupancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Ocupancy_Type__c</fullName>
    <label>Ocupancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>internal</fullName>
            </value>
            <value>
                <fullName>external</fullName>
            </value>
            <value>
                <fullName>internal OR external</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>