force-app/main/default/objects/IFv2_Request__c/fields/OldRequest__c.field-meta.xml
<CustomField>
    <fullName>OldRequest__c</fullName>
    <label>Old Request</label>
    <length>20</length>
    <type>Text</type>
</CustomField>