force-app/main/default/objects/IFv2_Request__c/fields/OldRequestName__c.field-meta.xml
<CustomField>
    <fullName>OldRequestName__c</fullName>
    <description>Stores the Old Request Name</description>
    <label>Old Request Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>