force-app/main/default/objects/IFv2_Request__c/fields/Ordernetprice__c.field-meta.xml
<CustomField>
    <fullName>Ordernetprice__c</fullName>
    <description>SAP order net price.</description>
    <inlineHelpText>SAP order net price</inlineHelpText>
    <label>Order net price</label>
    <length>20</length>
    <type>Text</type>
</CustomField>