force-app/main/default/objects/IFv2_Request__c/fields/PaidbyPlant__c.field-meta.xml
<CustomField>
    <fullName>PaidbyPlant__c</fullName>
    <description>42 Special Freights Approval</description>
    <inlineHelpText>Enter the percentage paid by plant (whole number)</inlineHelpText>
    <label>Paid by Plant</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>