force-app/main/default/objects/IFv2_Request__c/fields/PANFType__c.field-meta.xml
<CustomField>
    <fullName>PANFType__c</fullName>
    <label>PANF Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual requirement</fullName>
            </value>
            <value>
                <fullName>Multiple requirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>