force-app/main/default/objects/IFv2_Request__c/fields/Parallel__c.field-meta.xml
<CustomField>
    <fullName>Parallel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in General Approval Form</description>
    <label>Parallel</label>
    <type>Checkbox</type>
</CustomField>