force-app/main/default/objects/IFv2_Request__c/fields/ParentRequest__c.field-meta.xml
<CustomField>
    <fullName>ParentRequest__c</fullName>
    <label>Parent Request</label>
    <length>20</length>
    <type>Text</type>
</CustomField>