force-app/main/default/objects/IFv2_Request__c/fields/PartNumber__c.field-meta.xml
<CustomField>
    <fullName>PartNumber__c</fullName>
    <description>Part Number field.</description>
    <inlineHelpText>P/N without space or points and separate multiple inputs in lines</inlineHelpText>
    <label>Part Number</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>