force-app/main/default/objects/IFv2_Request__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>100% Overtime</fullName>
            </value>
            <value>
                <fullName>50% Overtime</fullName>
            </value>
            <value>
                <fullName>50% Overtime + Day off</fullName>
            </value>
            <value>
                <fullName>time off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>