force-app/main/default/objects/IFv2_Request__c/fields/PersonnelType__c.field-meta.xml
<CustomField>
    <fullName>PersonnelType__c</fullName>
    <label>Personnel type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ApprovalRoute__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Tariff</fullName>
            </value>
            <value>
                <fullName>Non-tariff</fullName>
            </value>
            <value>
                <fullName>Below SL1</fullName>
            </value>
            <value>
                <fullName>Above incl. SL1</fullName>
            </value>
            <value>
                <fullName>Special Tasks</fullName>
            </value>
            <value>
                <fullName>VA/VN</fullName>
            </value>
            <value>
                <fullName>Trainee / others</fullName>
            </value>
            <value>
                <fullName>SL1 - SL5</fullName>
            </value>
            <value>
                <fullName>RG-VA/VN</fullName>
            </value>
            <value>
                <fullName>Special working conditions – Praxisstudenten</fullName>
            </value>
            <value>
                <fullName>Special working conditions – Praktikant</fullName>
            </value>
            <value>
                <fullName>Special working conditions – Leasing</fullName>
            </value>
            <value>
                <fullName>Special working conditions – Sonstiges</fullName>
            </value>
            <value>
                <fullName>Special working conditions – Abschlussarbeiten / wissenschaftliche Arbeiten</fullName>
            </value>
            <value>
                <fullName>Special working conditions – Doktoranden</fullName>
            </value>
            <value>
                <fullName>SL1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>