force-app/main/default/objects/IFv2_Request__c/fields/PlannedDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Used in China Applications</description>
    <inlineHelpText>Please Choose a planned date</inlineHelpText>
    <label>Planned Date</label>
    <type>Date</type>
</CustomField>