force-app/main/default/objects/IFv2_Request__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SGDE-St (Weilimdorf)</fullName>
            </value>
            <value>
                <fullName>SGDE-Hi (Hildesheim)</fullName>
            </value>
            <value>
                <fullName>SDGE-Ig (Ingolstadt)</fullName>
            </value>
            <value>
                <fullName>SGDE-Mu (München)</fullName>
            </value>
            <value>
                <fullName>SGES-Tr (Treto)</fullName>
            </value>
            <value>
                <fullName>SGHU-Mc (Miskolc)</fullName>
            </value>
            <value>
                <fullName>SGNA-Le (Lerma)</fullName>
            </value>
            <value>
                <fullName>SGNA-Nv (Novi)</fullName>
            </value>
            <value>
                <fullName>SGBR-It (Itupeva)</fullName>
            </value>
            <value>
                <fullName>SGCN-Cs (Changsha)</fullName>
            </value>
            <value>
                <fullName>SGCN-Cc (Changchun)</fullName>
            </value>
            <value>
                <fullName>SGIN-Nh (Naganathapura)</fullName>
            </value>
            <value>
                <fullName>SGIN-Hs (Hassan)</fullName>
            </value>
            <value>
                <fullName>SGIN-Ci (Chennai)</fullName>
            </value>
            <value>
                <fullName>SGFR-Dy (Drancy)</fullName>
            </value>
            <value>
                <fullName>SGJP-Yh (Yokohama)</fullName>
            </value>
            <value>
                <fullName>SGKR-Yo (Yongin-si)</fullName>
            </value>
            <value>
                <fullName>SGIT-Tn (Torino)</fullName>
            </value>
            <value>
                <fullName>SGPT-Vc (Vila do Conde)</fullName>
            </value>
            <value>
                <fullName>SGZA-Bi (Brits)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>